--- a/src/ui.ui
+++ b/src/ui.ui
@@ -87,6 +87,12 @@
           </item>
           <item>
            <widget class="QComboBox" name="CoordinateSystemCombo">
+            <property name="minimumSize">
+             <size>
+              <width>80</width>
+              <height>0</height>
+             </size>
+            </property>
             <property name="maximumSize">
              <size>
               <width>100</width>
