--- a/src/ui.ui
+++ b/src/ui.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>930</width>
+    <width>933</width>
     <height>1075</height>
    </rect>
   </property>
@@ -40,7 +40,7 @@
              </size>
             </property>
             <property name="plainText">
-             <string>Eq(Derivative(u,t),Derivative(u, x,x))</string>
+             <string/>
             </property>
            </widget>
           </item>
@@ -52,15 +52,35 @@
          <property name="title">
           <string>Пространство решения</string>
          </property>
-         <layout class="QHBoxLayout" name="horizontalLayout_2">
-          <item>
+         <layout class="QGridLayout" name="gridLayout_4">
+          <item row="0" column="0">
            <widget class="QLabel" name="DimensionsCountLabel">
             <property name="text">
              <string>Пространственных измерений</string>
             </property>
            </widget>
           </item>
-          <item>
+          <item row="0" column="6">
+           <spacer name="horizontalSpacer">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="0" column="2">
+           <widget class="QLabel" name="CoordinateSystemLabel">
+            <property name="text">
+             <string>Система координат</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
            <widget class="QSpinBox" name="DimensionsCountSpin">
             <property name="maximumSize">
              <size>
@@ -79,14 +99,7 @@
             </property>
            </widget>
           </item>
-          <item>
-           <widget class="QLabel" name="CoordinateSystemLabel">
-            <property name="text">
-             <string>Система координат</string>
-            </property>
-           </widget>
-          </item>
-          <item>
+          <item row="0" column="3">
            <widget class="QComboBox" name="CoordinateSystemCombo">
             <property name="minimumSize">
              <size>
@@ -110,7 +123,14 @@
             </item>
            </widget>
           </item>
-          <item>
+          <item row="0" column="5">
+           <widget class="QCheckBox" name="HasAnaliticalCheckBox">
+            <property name="text">
+             <string>Есть аналитическое решение</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="4">
            <widget class="QCheckBox" name="IsStationaryCheckBox">
             <property name="layoutDirection">
              <enum>Qt::LeftToRight</enum>
@@ -119,19 +139,6 @@
              <string>Стационарная задача</string>
             </property>
            </widget>
-          </item>
-          <item>
-           <spacer name="horizontalSpacer">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
           </item>
          </layout>
         </widget>
@@ -169,7 +176,7 @@
                    </size>
                   </property>
                   <property name="plainText">
-                   <string>Eq(u(0, t), 0)</string>
+                   <string/>
                   </property>
                  </widget>
                 </item>
@@ -191,7 +198,7 @@
                    </size>
                   </property>
                   <property name="plainText">
-                   <string>Eq(u(pi, t), 1)</string>
+                   <string/>
                   </property>
                  </widget>
                 </item>
@@ -222,7 +229,32 @@
                 </size>
                </property>
                <property name="plainText">
-                <string>u|_{t=0} = \frac{x}{\pi} + 4e^{-9t}sin(3x)</string>
+                <string/>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </item>
+          <item>
+           <widget class="QGroupBox" name="AnalyticalSolutionGroup">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="title">
+             <string>Аналитическое решение</string>
+            </property>
+            <layout class="QVBoxLayout" name="verticalLayout_10">
+             <item>
+              <widget class="QPlainTextEdit" name="AnalyticalSolutionPlainText">
+               <property name="maximumSize">
+                <size>
+                 <width>16777215</width>
+                 <height>80</height>
+                </size>
                </property>
               </widget>
              </item>
@@ -477,7 +509,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>930</width>
+     <width>933</width>
      <height>22</height>
     </rect>
    </property>
@@ -505,7 +537,7 @@
   </action>
   <action name="ShowPrettyMenuButton">
    <property name="text">
-    <string>Показать LaTeX</string>
+    <string>Показать формулы</string>
    </property>
   </action>
   <action name="SaveMenuButton">
