feat app: move codegen to jinja

--- a/src/fortran_template.jinja2
+++ b/src/fortran_template.jinja2
@@ -20,7 +20,7 @@ CONTAINS
 
    !-----------------------------------------------------------------------------
 
-   {analytical_function}
+   {{ code_model.analytical_solution }}
 
    !-----------------------------------------------------------------------------
 
